--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Zalando_Demo_2.0</title>
+  <title>CodePen - public2</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -10,20 +10,18 @@
 <!-- partial:index.partial.html -->
 <head>
   <script src="https://player.live-video.net/1.0.0-rc.14/amazon-ivs-player.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
+
 <body>
   <div id="app">
     <div class="inner">
-
-      <div class="video-wrapper">
-        <span class="live-pill">Zalando Live</span>
-        <video id="video-player"  playsinline controls autoplay></video>
-
-        <div class="quiz-wrap">
-        </div>
-      </div>
-
+              <span class="live-pill">Zalando Live</span>
+      <video id="video-player" controls autoplay playsinline></video>
+    </div>
+    <div class="footer">
+      <div></div>
+      <span>&copy; 2020, Amazon Web Services, Inc. or its affiliates. All rights reserved.</span>
+      <div class="aws-logo"></div>
     </div>
   </div>
 </body>
